--- a/isa-blog/package.json
+++ b/isa-blog/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/lora": "^4.5.6",
     "@fontsource/nunito": "^4.5.8",
+    "dotenv": "^16.0.0",
     "framer-motion": "^6.3.2",
     "gatsby": "^4.12.1",
     "gatsby-plugin-feed": "^4.12.1",
@@ -29,6 +30,7 @@
     "gatsby-remark-prismjs": "^6.12.1",
     "gatsby-remark-responsive-iframe": "^5.12.1",
     "gatsby-remark-smartypants": "^5.12.1",
+    "gatsby-source-contentful": "^7.11.0",
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
