--- a/isa-blog/package.json
+++ b/isa-blog/package.json
@@ -10,8 +10,6 @@
   "dependencies": {
     "@chakra-ui/gatsby-plugin": "^2.0.4",
     "@chakra-ui/react": "^1.8.8",
-    "@contentful/rich-text-react-renderer": "^15.12.1",
-    "@contentful/rich-text-types": "^15.12.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/lora": "^4.5.6",
@@ -39,9 +37,7 @@
     "prismjs": "^1.28.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
