--- a/isa-blog/package.json
+++ b/isa-blog/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/lora": "^4.5.6",
     "@fontsource/nunito": "^4.5.8",
+    "@lyket/react": "^1.4.8",
     "dotenv": "^16.0.0",
     "framer-motion": "^6.3.2",
     "gatsby": "^4.12.1",
+    "gatsby-plugin-disqus": "^1.2.4",
     "gatsby-plugin-feed": "^4.12.1",
     "gatsby-plugin-gatsby-cloud": "^4.12.1",
     "gatsby-plugin-google-analytics": "^4.12.1",
