--- a/isa-blog/package.json
+++ b/isa-blog/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-copy-linked-files": "^5.12.1",
     "gatsby-remark-images": "^6.12.1",
     "gatsby-remark-prismjs": "^6.12.1",
@@ -37,7 +38,7 @@
     "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
     "prismjs": "^1.28.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
