--- a/isa-blog/package.json
+++ b/isa-blog/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/lora": "^4.5.6",
     "@fontsource/nunito": "^4.5.8",
+    "@formspree/react": "^2.2.5",
     "@lyket/react": "^1.4.8",
     "dotenv": "^16.0.0",
     "framer-motion": "^6.3.2",
